# rabbitMQ

./: README.md  producer.py  pyproject.toml  requirements.txt  test.py
analytics/: analytics_consumer.py
payments/: payment_consumer.py
simple_example/: simple_consumer.py  simple_producer.py
test/: test_consumer.py
users/: user_consumer.py
